# clipboard-vision-mcp

./: .env.example  .gitignore  LICENSE  README.fr.md  README.md  package.json  pyproject.toml  tsconfig.json
clipboard_vision_mcp/: __init__.py  server.py
docs/: CLIENTS.md  INSTALL_PROMPT_EN.md  INSTALL_PROMPT_FR.md  OPENCODE.md
examples/: claude_code_settings.json  opencode.json  smoke_test.py
src/: clipboard.ts  index.ts  vision.ts
