[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipboard-vision-mcp"
version = "0.1.0"
description = "MCP server that lets any text LLM see images directly from your system clipboard (Groq + Llama-4 Scout)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Capetlevrai" }]
keywords = ["mcp", "vision", "clipboard", "groq", "llama", "llm", "opencode", "deepseek"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
dependencies = [
  "mcp>=1.0.0",
  "groq>=0.11.0",
  "aiofiles>=23.0.0",
  "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/Capetlevrai/clipboard-vision-mcp"
Repository = "https://github.com/Capetlevrai/clipboard-vision-mcp"
Issues = "https://github.com/Capetlevrai/clipboard-vision-mcp/issues"

[project.scripts]
clipboard-vision-mcp = "clipboard_vision_mcp.server:run"

[tool.setuptools.packages.find]
include = ["clipboard_vision_mcp*"]
exclude = ["examples*", "docs*", "tests*"]
